--- a/ACA/ACA.csproj
+++ b/ACA/ACA.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -17,7 +17,12 @@
 
   <ItemGroup>
     <Folder Include="Anjana\" />
-    <Folder Include="Aysha\" />
     <Folder Include="Chalavara\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Aysha\Authentication\Views\Loginpage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
